# RAG-evaluator

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  IDEA.md  LICENSE  Makefile  PHASE1_PLAN.md  README.md  SPEC.md  SUMMARY.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
data/: test_set.json
data/raw/: sample_doc1.txt  sample_doc2.txt  sample_doc3.txt
scripts/: run_evaluation.py  run_streamlit.py  test_chroma_rag.py
src/rag_evaluator/: cli.py  config.py
src/rag_evaluator/common/: base_rag.py  document_loaders.py
src/rag_evaluator/evaluation/: __init__.py  difficulty_analysis.py  evaluator.py  report_generator.py  statistics.py
src/rag_evaluator/rag_implementations/filesystem_rag/: filesystem_rag.py
src/rag_evaluator/rag_implementations/graph_rag/: neo4j_rag.py
src/rag_evaluator/rag_implementations/vector_hybrid/: hybrid_rag.py
src/rag_evaluator/rag_implementations/vector_semantic/: chroma_rag.py
src/rag_evaluator/ui/: streamlit_app.py
tests/integration/: test_chroma_rag_integration.py  test_evaluation_integration.py  test_multi_format_loading.py
tests/unit/: test_base_rag.py  test_chroma_rag.py  test_config.py  test_difficulty_analysis.py  test_document_loaders.py  test_evaluator.py  test_report_generator.py  test_statistics.py
